= Changelog

This document provides a high-level view of the changes to the macOS Security Compliance Project.

== [Ventura, Revision 5.1] - 2024-12-XX
* Rules
** Modified Rules
*** os_world_writable_library_folder_configure
*** pwpolicy_special_character_enforce

== [Ventura, Revision 5.0] - 2024-09-12

* Rules
** Modified Rules
*** os_application_sandboxing (https://github.com/usnistgov/macos_security/pull/409[#409])
*** os_camera_disable (https://github.com/usnistgov/macos_security/issues/388[#388])
*** os_mobile_file_integrity_enable (https://github.com/usnistgov/macos_security/pull/409[#409])
*** system_settings_rae_disable (https://github.com/usnistgov/macos_security/pull/408[#408])
*** system_settings_siri_listen_disable (https://github.com/usnistgov/macos_security/issues/411[#411])
*** system_settings_ssh_disable (https://github.com/usnistgov/macos_security/pull/408[#408])
*** system_settings_system_wide_preferences_configure (https://github.com/usnistgov/macos_security/issues/418[#418])

** Removed Rules
*** os_safari_popups_disabled

* Baselines
** Modified existing baselines

* Scripts
** generate_guidance
*** Updated date format for compliance script (https://github.com/usnistgov/macos_security/issues/405[#405])
*** Spelling fixes (https://github.com/usnistgov/macos_security/pull/409[#409])
*** Support `.yaml` & .`yml` (https://github.com/usnistgov/macos_security/issues/412[#412])
** generate_baseline
*** Removed unnecessary try blocks (https://github.com/usnistgov/macos_security/issues/401[#401])
*** Update with correct syntax for replace (https://github.com/usnistgov/macos_security/pull/406[#406])
*** Support `.yaml` & .`yml` (https://github.com/usnistgov/macos_security/issues/412[#412])
** generate_scap
*** Spelling fixes (https://github.com/usnistgov/macos_security/pull/409[#409])

== [Ventura, Revision 4.0] - 2024-04-24

* Rules
** Modified Rules
*** os_anti_virus_installed (https://github.com/usnistgov/macos_security/issues/345[#345])