@@ -7,6 +7,9 @@ This document provides a high-level view of the changes to the macOS Security Co
 ** Modified Rules
 *** os_world_writable_library_folder_configure
 *** pwpolicy_special_character_enforce
+*** pwpolicy_history_enforce
+*** pwpolicy_account_lockout_timeout_enforce
+*** pwpolicy_account_lockout_enforce
 
 == [Ventura, Revision 5.0] - 2024-09-12
 
